# chess-clock

./: .gitignore  CMakeLists.txt  readme.md  棋钟桌面程序 PRD.md
.cursor/rules/: program-expert.mdc
.github/workflows/: build.yml
src/: chess_clock.cpp  chess_clock.h  main.cpp  player_timer.h  prefs.cpp  prefs.h  settings_dialog.cpp  settings_dialog.h  types.h
